--- a/index.html
+++ b/index.html
@@ -1,7 +1,12 @@
 <img src="https://tse4.mm.bing.net/th?q=Fortnite+Building&w=120&h=120&c=1&rs=1&qlt=90&pid=InlineBlock&mkt=en-US&adlt=strict&t=1&mw=247" width"180" height "100">
 <p> Welcome to BuildPractice.io. In this game you'll be improving your building in Fortnite: Batte Royale! <p>
 <p> How's your building in Fortnite? Bad Moderate Good <p>
-<p> Based on what you pick, there'll be different levels to test your building. <p>\
-<p> For Biginner level players, there's going to be challanges that will test you
+<p> Based on what you pick, there'll be different levels to test your building. <p>
+<p> For Beginner level players, there's going to be challanges that will test you
 so that you can move on to the intermediate level course. These obsticles have been tested by Pros who've practiced this course
-
+<p>When you are done with the course this is what you'll have learned.
+1x1's
+90's
+Build in 5 seconds.<p>
+background(5,1,1);
+  noStroke();
