--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@ so that you can move on to the intermediate level course. These obsticles have b
 1x1's
 90's
 Build in 5 seconds.<p>
-
-
+body{
+  background(101,23,23)rgb:20
+  };
