--- a/index.html
+++ b/index.html
@@ -9,5 +9,5 @@ so that you can move on to the intermediate level course. These obsticles have b
 90's
 Build in 5 seconds.<p>
 body{
-  background(101,23,23)rgb:20
-  };
+  background(148,251,255);
+  }
